<resources>
    <string name="app_name">VKCupApp</string>
    <string name="news">News</string>
    <string name="taxi">Taxi</string>
    <string name="game">Game</string>
    <string name="video">Video</string>
    <string name="voice">Voice</string>
    <string name="hide">Hide</string>
    <string name="like">Like</string>
    <string name="group_name">Group icon</string>
    <string name="likes">Likes</string>
    <string name="comments">Comments</string>
    <string name="reposts">Reposts</string>
    <string name="vk_user_data_key" translatable="false">vkuserdata</string>
    <string name="auth_error">Authentication error , please try again</string>
    <string name="ok">OK</string>
    <string name="cancel">CANCEL</string>
    <string name="auth_offer_text">To gain access, authorization in Vkontakte is required</string>
    <string name="ago">ago</string>
    <string name="hour">hour</string>
    <string name="hours">hours</string>
    <string name="minute">minute</string>
    <string name="minutes">minutes</string>
    <string name="auth">Auth</string>
    <string name="try_again">TRY AGAIN</string>
    <string name="network_error_text">Network error, please check your connection and try again</string>
    <string name="content_over_text">Content is over, check this app later</string>
    <string name="location_permission_explanation_text">To work with this app you need to grant location permission</string>
    <string name="location_permission_denied_text">Location permission is denied. Please grant this permission to work with app</string>
    <string name="last_location_sp" translatable="false">LAST_LOCATION_SP</string>
    <string name="wrong_route_text">Wrong way, the route haven\'t been rendered</string>
    <string name="done">Done</string>
    <string name="text_last_location_undefined">Last location is undefined</string>
    <string name="go_fast">Go fast</string>
    <string name="see_beauty">See beauty</string>
    <string name="on_a_drone">On a drone</string>
    <string name="currency" translatable="false">₽</string>
    <string name="min_on_the_way">min on the way</string>
    <string name="min_waiting">min waiting</string>
    <string name="order_for">Order for </string>
</resources>