<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardBackgroundColor="@color/white">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@null"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/taxiFromWhereBlock"
            style="@style/taxiLocationEditTextStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/imageView3"
            app:layout_constraintTop_toBottomOf="@+id/imageCancelOrder">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/taxiFromWhereField"
                style="@android:style/TextAppearance.Small.Inverse"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:enabled="false"
                android:textColor="@color/black" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/taxiWhereToBlock"
            style="@style/taxiLocationEditTextStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/imageView4"
            app:layout_constraintTop_toBottomOf="@+id/taxiFromWhereBlock">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/taxiWhereToField"
                style="@android:style/TextAppearance.Small.Inverse"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/black" />

        </com.google.android.material.textfield.TextInputLayout>

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="14dp"
            app:layout_constraintBottom_toBottomOf="@+id/taxiFromWhereBlock"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/taxiFromWhereBlock"
            app:srcCompat="@drawable/ic_from_where" />

        <ImageView
            android:id="@+id/imageView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="14dp"
            app:layout_constraintBottom_toBottomOf="@+id/taxiWhereToBlock"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/taxiWhereToBlock"
            app:srcCompat="@drawable/ic_where_to" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/fastTaxiLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:visibility="gone"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/taxiWhereToBlock">

            <ImageView
                android:id="@+id/imageViewCar1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/image_car1" />

            <TextView
                android:id="@+id/fastTaxiText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="4dp"
                android:text="@string/go_fast"
                android:textColor="#000000"
                android:textSize="15sp"
                app:layout_constraintStart_toEndOf="@+id/imageViewCar1"
                app:layout_constraintTop_toTopOf="@+id/imageViewCar1" />

            <TextView
                android:id="@+id/fastTaxiWaiting"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="13sp"
                app:layout_constraintStart_toStartOf="@+id/fastTaxiText"
                app:layout_constraintTop_toBottomOf="@+id/fastTaxiText" />

            <TextView
                android:id="@+id/fastTaxiPrice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:textColor="#000000"
                android:textSize="15sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/niceTaxiLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:visibility="gone"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/fastTaxiLayout">

            <ImageView
                android:id="@+id/imageViewCar2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/image_car2" />

            <TextView
                android:id="@+id/niceTaxiText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="4dp"
                android:text="@string/see_beauty"
                android:textColor="#000000"
                android:textSize="15sp"
                app:layout_constraintStart_toEndOf="@+id/imageViewCar2"
                app:layout_constraintTop_toTopOf="@+id/imageViewCar2" />

            <TextView
                android:id="@+id/niceTaxiWaiting"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="1dp"
                android:textSize="13sp"
                app:layout_constraintStart_toStartOf="@+id/niceTaxiText"
                app:layout_constraintTop_toBottomOf="@+id/niceTaxiText" />

            <TextView
                android:id="@+id/niceTaxiPrice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:textColor="#000000"
                android:textSize="15sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/droneTaxiLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/niceTaxiLayout">

            <ImageView
                android:id="@+id/imageViewCar3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/image_car3" />

            <TextView
                android:id="@+id/droneTaxiText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="4dp"
                android:text="@string/on_a_drone"
                android:textColor="#000000"
                android:textSize="15sp"
                android:visibility="visible"
                app:layout_constraintStart_toEndOf="@+id/imageViewCar3"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/droneTaxiWaiting"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="1dp"
                android:textSize="13sp"
                android:visibility="visible"
                app:layout_constraintStart_toStartOf="@+id/droneTaxiText"
                app:layout_constraintTop_toBottomOf="@+id/droneTaxiText" />

            <TextView
                android:id="@+id/droneTaxiPrice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:textColor="#000000"
                android:textSize="15sp"
                android:visibility="visible"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <ImageButton
            android:id="@+id/imageCancelOrder"
            android:layout_width="60dp"
            android:layout_height="20dp"
            android:layout_marginTop="10dp"
            android:background="@null"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="@+id/imageView3"
            app:layout_constraintStart_toStartOf="@+id/imageView3"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_cancel" />

        <Button
            android:id="@+id/buttonTaxiAction"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/done"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/droneTaxiLayout" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>